<resources>
    <string name="app_name">App Porfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Advaits Android App Porfolio</string>
    <string name="first_app">Popular Movies</string>
    <string name="second_app">Stock Hawk</string>
    <string name="third_app">Build it Bigger</string>
    <string name="fourth_app">Make Your App Material</string>
    <string name="fifth_app">Go Ubiquitous</string>
    <string name="sixth_app">Capstone</string>
    <string name="toast_message">This button will launch %1$s</string>
</resources>
