<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.advaitshukla.appporfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#212121">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Advaits Android App Porfolio"
            android:textSize="22dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:textColor="#FAFAFA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.21">

            <Button
                android:id="@+id/first_button"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:text="@string/first_app"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:layout_weight="0.11"
                android:background="#FF9100"
                android:textColor="#FAFAFA" />

            <Button
                android:id="@+id/second_button"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:text="@string/second_app"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:layout_weight="0.11"
                android:background="#FF9100"
                android:allowUndo="true"
                android:textColor="#FAFAFA" />

            <Button
                android:id="@+id/third_button"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:text="@string/third_app"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:layout_weight="0.11"
                android:background="#FF9100"
                android:textColor="#FAFAFA" />

            <Button
                android:id="@+id/fourth_button"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:text="@string/fourth_app"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:layout_weight="0.11"
                android:background="#FF9100"
                android:textColor="#FAFAFA" />

            <Button
                android:id="@+id/fifth_button"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:text="@string/fifth_app"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:layout_weight="0.11"
                android:background="#FF9100"
                android:textColor="#FAFAFA" />

            <Button
                android:id="@+id/sixth_button"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:text="@string/sixth_app"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:layout_weight="0.11"
                android:background="#FF9100"
                android:textColor="#FAFAFA" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
